2007-03-28  Werner Koch  <wk@g10code.com>

	* benchmark.c (dsa_bench): New args ITERATIONS and PRINT_HEADER.
	(main): Call dsa and ecc benchs.

	* Makefile.am (TESTS): Move pkbench to EXTRA_PROGRAMS.

2007-03-22  Werner Koch  <wk@g10code.com>

	* benchmark.c (die): New.
	(ecc_bench): New.

	* pkbench.c (main): Reworked to provide proper option handling.

2007-03-13  Werner Koch  <wk@g10code.com>

	* mpitests.c: Reformatted to GNU standards.
	(main): Add options --verbose and --debug for future use.

2007-03-13  Werner Dittmann <Werner.Dittmann@t-online.de>  (wk)

	* mpitests.c: New.

2007-02-23  Werner Koch  <wk@g10code.com>

	* Makefile.am (TEST): Run benchmark as last. 

	* ac-data.c (check_sexp_conversion): Print label only in verbose
	mode.

	* pubkey.c (main): Run test just 2 times instead of 10.
	(get_elg_key_new): New.
	(check_run): Also run tests with Elgamal keys.
	(check_keys): New arg NBITS_DATA.
	(get_elg_key_new): Use only 400 for the 512 bit Elgamal test.

	* random.c: New.

2007-02-22  Werner Koch  <wk@g10code.com>

	* basic.c (check_pubkey_sign): Also try signing using an OID.

	* Makefile.am (TESTS) [W32]: Removed pkbench for now.
	* pkbench.c (benchmark): Fixed for W32.

2007-02-21  Werner Koch  <wk@g10code.com>

	* hmac.c (check_one_mac): Make pointer args const.
	* basic.c (check_one_md): Ditto.
	(check_one_hmac): Ditto.

	* keygen.c (progress_cb): Filter out line feeds.
	* basic.c (progress_handler): Ditto.

2006-12-18  Werner Koch  <wk@g10code.com>

	* Makefile.am (AM_CFLAGS, AM_CPPFLAGS): Splitted and merged with
	Moritz' changes.
	(INCLUDES): Removed.

	* keygen.c (progress_handler): New.
	(main): Use it in verbose mode.

2006-11-05  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am (AM_CFLAGS): Added -I$(top_builddir)/src so that the
	new gcrypt.h is used, not the one installed in the system.

2006-10-17  Werner Koch  <wk@g10code.com>

	* keygen.c (check_rsa_keys): Also create an 1536 bit DSA key.
