@@ -1,3 +1,8 @@
+2007-04-12  Marcus Brinkmann  <marcus@g10code.de>
+
+	* ac-schemes.c (scheme_spec): Remove const qualifier from member M.
+	(es_check): Remove const qualifier from C and M2.
+
 2007-03-28  Werner Koch  <wk@g10code.com>
 
 	* benchmark.c (dsa_bench): New args ITERATIONS and PRINT_HEADER.
